Fixed size issue with blobdata in metadata blobs, added accountId+containerId check for datachunks, refactored tests